tests/output/self_hosted/no_constructor_error.txt
tests/no_constructor_error.oomph:4: error: type 'IHaveNoConstructor' has no constructor

    print(new IHaveNoConstructor("ha"))
          ^^^

